--- a/notes/.vuepress/styles/index.styl
+++ b/notes/.vuepress/styles/index.styl
@@ -6,11 +6,11 @@
     src url('/notes/fonts/FredokaOne.ttf')
 @font-face
     font-family 'ZCOOLKuaiLe'
-    src url('/notes/fonts/ZCOOLXiaoWei.ttf')
+    src url('/notes/fonts/ZCOOLKuaiLe.ttf')
 body, .ui-post-title
-    font-family ZCOOLKuaiLe
+    font-family PT Serif, Serif, Avenir, Helvetica, Arial, sans-serif
 .ui-post-title, #vuepress-theme-blog__post-layout, .vuepress-blog-theme-content, h1, h2, h3, h4, h5
-    font-family ZCOOLKuaiLe !important
+    font-family PT Serif, Serif, Avenir, Helvetica, Arial, sans-serif !important
 .align-center
     display block
     margin 0 auto
