--- a/notes/.vuepress/styles/index.styl
+++ b/notes/.vuepress/styles/index.styl
@@ -1,9 +1,9 @@
 @font-face
     font-family 'RubikMoonrocks'
     src url('/notes/fonts/RubikMoonrocks.ttf')
-@font-face
-    font-family 'FredokaOne'
-    src url('/notes/fonts/FredokaOne.ttf')
+// @font-face
+// font-family 'FredokaOne'
+// src url('/notes/fonts/FredokaOne.ttf')
 @font-face
     font-family 'ZCOOLKuaiLe'
     src url('/notes/fonts/ZCOOLKuaiLe.ttf')
@@ -17,4 +17,4 @@ body, .ui-post-title
 .header-wrapper .title a
     font-family RubikMoonrocks
 .header-wrapper .header-right-wrap .nav .nav-item a
-    font-family FredokaOne
+    font-family RubikMoonrocks
