--- a/assets/css/extended/base.css
+++ b/assets/css/extended/base.css
@@ -15,11 +15,11 @@
     src: url('/notes/fonts/ZCOOLQingKeHuangYou-Regular.ttf') format('truetype');
 } */
 
-@font-face {
+/* @font-face {
     font-family: 'Roboto';
     src: url('/notes/fonts/Roboto-Regular.ttf') format('truetype');
-}
+} */
 
-* {
+/* * {
     font-family: 'Roboto' !important;
-}
+} */
